--- a/App_Account/app.config
+++ b/App_Account/app.config
@@ -4,10 +4,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <appSettings>
-    <add key="nvelocity" value="nvelocity.properties">
-    </add>
-    <add key="nvelocity_directive" value="nvelocity.properties">
-    </add>
+    <add key="nvelocity" value="nvelocity.properties" />
+    <add key="nvelocity_directive" value="nvelocity.properties" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
